nidhilawchamer/src/index.css
/* RESET */
*{
  margin:0;
  padding:0;
  box-sizing:border-box;
}

/* Fix scrolling */
html, body {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

/* Prevent section cut */
section {
  width: 100%;
  overflow-x: hidden;
}

/* PREMIUM LAW THEME BACKGROUND */
body{
  background: radial-gradient(circle at top,
              #071326 0%,
              #030b18 60%,
              #020814 100%);
  color:#fff;
  font-family: "Poppins", sans-serif;
}

/* REMOVE DEFAULT VITE LIMIT */
#root{
  max-width:100% !important;
  margin:0 !important;
  padding:0 !important;
}

